# parallel-text-finisher

./: .pre-commit-config.yaml  Dockerfile  README.md  license-check.txt  pyproject.toml
configs/: settings.toml
scratch/word_alignment_hover/: index.html
src/parallel_text_finisher/: __init__.py  finisher.py
src/parallel_text_finisher/common/: config.py  data_reader.py  parallel_text.py
src/parallel_text_finisher/common/data/: data_reader.py  parallel_text.py
src/parallel_text_finisher/config/: config.py  validator.py
src/parallel_text_finisher/tex/: tex_writer.py
